# agentti

./: .gitignore  README.md  agent.py  prompts.py  pyproject.toml
llm/: local.py  remote.py
skills/datetime/: SKILL.md
skills/datetime/scripts/: get_datetime.py
skills/position/: SKILL.md
skills/position/scripts/: get_position.py
skills/weather/: SKILL.md
skills/weather/scripts/: get_weather.py
src/: agent.py  prompts.py
src/llm/: __init__.py  local.py  remote.py
src/skills/: skills.py
