[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentti"
version = "0.1.0"
description = "Simple agent with feedback mechanism"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Teodor", email = "teodor@bedford.st"},
]
license = {text = "MIT"}

dependencies = [
    "ollama>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
agentti = "agent:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"